tests/baselines/reference/checkJsFiles_skipDiagnostics.errors.txt
tests/cases/compiler/a.js(37,1): error TS2349: Cannot invoke an expression whose type lacks a call signature. Type 'Number' has no compatible call signatures.


==== tests/cases/compiler/a.js (1 errors) ====
    var x = 0;
    
    
    /// @ts-ignore
    x();
    
    /// @ts-ignore
    x();
    
    /// @ts-ignore
    x(
        2,
        3);
    
    
    
    // @ts-ignore
    // come comment
    // some other comment
    
    // @anohter
    
    x();
    
    
    
    // @ts-ignore: no call signature
    x();
    
    // @ts-ignore TS2349
    x();
    
    // @ts-ignore TS2349, TS2350
    x();
    
    // @ts-ignore TS2350 here should be error
    x();
    ~~~
!!! error TS2349: Cannot invoke an expression whose type lacks a call signature. Type 'Number' has no compatible call signatures.